[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
description = "A client library for the Diffbot API"
keywords = ["diffbot", "web scraping", "api"]
license = "MIT"
readme = "Readme.md"
name = "diffbot"
version = "0.1.0"

[dependencies]
hyper = "0.7"
rustc-serialize = "0.3"
url = "0.5"
