[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
description = "A client library for the Diffbot API"
documentation = "http://diffbot.github.io/diffbot-rust-client/diffbot/index.html"
keywords = ["diffbot", "web-scraping", "api"]
license = "MIT"
name = "diffbot"
readme = "Readme.md"
repository = "https://github.com/diffbot/diffbot-rust-client"
version = "0.1.0"

[dependencies]
hyper = "0.7"
mime = "0.2.0"
rustc-serialize = "0.3"
url = "0.5"

[dependencies.clippy]
optional = true
version = "0.0.61"

[features]
default = []
real_test = []
